syntax = "proto3";

package btc.brc20.v1;

message Deploy {
    string id = 1;
    string symbol = 2;
    string max_supply = 3;
    string mint_limit = 4;
    int32 decimals = 5;
    string deployer = 6;
}

message Mint {
    string id = 1;
    string token = 2;
    string to = 3;
    string amount = 4;
}

// Used to keep track of pending transfers
message InscribedTransfer {
    string id = 1;
    string token = 2;
    string from = 3;
    string amount = 4;
    string utxo = 5;
    uint64 offset = 6;
    uint64 utxo_amount = 7;
}

// Represents executed transfer
message ExecutedTransfer {
    string id = 1;
    string token = 2;
    string from = 3;
    string to = 4;
    string amount = 5;
}

message Brc20Events {
    repeated Deploy deploys = 1;
    repeated Mint mints = 2;
    repeated InscribedTransfer inscribed_transfers = 3;
    repeated ExecutedTransfer executed_transfers = 4;
}

// ================================================================
// Internal messages (e.g.: used in store modules)
// ================================================================

// Used to keep track of pending transfers location in a UTXO
message InscribedTransferLocation {
    string id = 1;
    string token = 2;
    string from = 3;
    string amount = 4;

    // Offset indicating which sat of the UTXO the transfer is inscribed on
    uint64 offset = 5;

    // Note: maybe remove this
    uint64 utxo_amount = 6;
}

message Token {
    string id = 1;
    string symbol = 2;
    string max_supply = 3;
    string mint_limit = 4;
    int32 decimals = 5;
    string deployer = 6;
}